--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('https://www.transparenttextures.com/patterns/asfalt-light.png'), #FF8C00;
+    background: url(''), #FF8C00;
     background-size: cover;
 }
 
